change ui for data page

--- a/src/resources/convertor_page_data_v2.html
+++ b/src/resources/convertor_page_data_v2.html
@@ -29,28 +29,46 @@
       <div class="row" style="height: 45%;width: 100%;">
           <div class="col-md-5" style="background: rgba(238,238,238,0.4);height: 310px;margin-left: 50px;">
             <!-- 数据基本信息表格 -->
-            <div style="text-align: center;font-size: large;font-weight: bold;color: #333;"><font style="color: #333;">导入数据统计</font></div>
+            <div style="text-align: center;color: #333;"><font style="font-family: SourceHanSansCN-Normal;
+              font-size: 20px;
+              color: #333333;
+              letter-spacing: 1.14px;">导入数据统计</font></div>
             <table id="data_general_table" style="width:440px; margin-left:15px;color: #333;margin-top: 30px;">
               <tr style="border: solid 3px;height: 40px;border-color: #D6D6D6;">
-                <td style="font-size: medium;font-weight: bold;padding-left: 15px;background: #EEEEEE;border: solid 2px;border-color: #D6D6D6;">总数据大小</td>
-                <td id="total_data_amount" style="font-weight:bolder;padding-left: 10px;"></td>
+                <td style="padding-left: 15px;background: #EEEEEE;border: solid 2px;border-color: #D6D6D6;"><font style="font-family: SourceHanSansCN-Normal;
+                  font-size: 16px;
+                  color: #333333;
+                  text-align: right;"></font>总数据量</td>
+                <td id="total_data_amount" style="font-weight:bolder;text-align: right;padding-right: 15px;"></td>
               </tr>
               <tr style="border: solid 3px;height: 40px;border-color: #D6D6D6;">
-                <td style="font-size: medium;font-weight: bold;padding-left: 15px;background: #EEEEEE;border: solid 2px;border-color: #D6D6D6;">测试数据量</td>
-                <td id="test_data_amount" style="font-weight: bolder;padding-left: 10px;"></td>
+                <td style="padding-left: 15px;background: #EEEEEE;border: solid 2px;border-color: #D6D6D6;"><font style="font-family: SourceHanSansCN-Normal;
+                  font-size: 16px;
+                  color: #333333;
+                  text-align: right;"></font>测试数据量</td>
+                <td id="test_data_amount" style="font-weight: bolder;text-align: right;padding-right: 15px;"></td>
               </tr>
               <tr style="border: solid 3px;height: 40px;border-color: #D6D6D6;">
-                <td style="font-size: medium;font-weight: bold;padding-left: 15px;background: #EEEEEE;border: solid 2px;border-color: #D6D6D6;">验证数据量</td>
-                <td id="val_data_amount" style="font-weight: bolder;padding-left: 10px;"></td>
+                <td style="padding-left: 15px;background: #EEEEEE;border: solid 2px;border-color: #D6D6D6;"><font style="font-family: SourceHanSansCN-Normal;
+                  font-size: 16px;
+                  color: #333333;
+                  text-align: right;">验证数据量</font></td>
+                <td id="val_data_amount" style="font-weight: bolder;text-align: right;padding-right: 15px;"></td>
               </tr>
               <tr style="border: solid 3px;height: 40px;border-color: #D6D6D6;">
-                <td style="font-size: medium;font-weight: bold;padding-left: 15px;background: #EEEEEE;border: solid 2px;border-color: #D6D6D6;">数据类别个数</td>
-                <td id="class_counts" style="font-weight: bolder;padding-left: 10px;"></td>
+                <td style="padding-left: 15px;background: #EEEEEE;border: solid 2px;border-color: #D6D6D6;"><font style="font-family: SourceHanSansCN-Normal;
+                  font-size: 16px;
+                  color: #333333;
+                  text-align: right;">数据类别</font></td>
+                <td id="class_counts" style="font-weight: bolder;text-align: right;padding-right: 15px;"></td>
               </tr>
             </table>
           </div>
           <div class="col-md-5" style="background: rgba(238,238,238,0.4);height: 310px;margin-left: 15px;">
-            <div style="text-align: center;font-weight: bold;font-size: large;margin-bottom:20px;color: #333;">
+            <div style="text-align: center;margin-bottom:20px;color: #333;font-family: SourceHanSansCN-Normal;
+            font-size: 20px;
+            color: #333333;
+            letter-spacing: 1.14px;">
               数据类别分布
             </div>
             <div id="bar_chart_testdata_container" style="width: 440px;height: 300px;margin-left:20px;margin-top: -30px;"></div>
@@ -58,7 +76,10 @@
       </div>
       <div class="row" style="height: 45%;width: 100%;margin-top:35px;">
         <div id="sample_data_div" class="col-md-5" style="height:351px;background: rgba(238,238,238,0.4);margin-left: 50px;">
-          <div style="text-align: center;font-weight: bold;font-size: large;margin-left:15px;color: black;">
+          <div style="text-align: center;margin-left:15px;color: black;font-family: SourceHanSansCN-Normal;
+          font-size: 20px;
+          color: #333333;
+          letter-spacing: 1.14px;">
             训练集样例数据
           </div>
           <div id="bar_chart_histgram" style="width: 440px;height: 320px;margin-top: -20px;display: block;margin-bottom: 40px;"></div>
@@ -97,7 +118,10 @@
           
         </div>
         <div id="sample_testdataset_data_div" class="col-md-5" style="height: 351px;background: rgba(238,238,238,0.4);margin-left: 15px;">
-          <div style="text-align: center;font-weight: bold;font-size: large;margin-left:15px;color: black;">
+          <div style="text-align: center;margin-left:15px;color: black;font-family: SourceHanSansCN-Normal;
+          font-size: 20px;
+          color: #333333;
+          letter-spacing: 1.14px;">
             测试集样例数据
           </div>
 
@@ -216,8 +240,10 @@ body {
 <script src="http://localhost:6003/js/echarts.min.js"></script>
 
 <script>
-var prev_click_img_li_id = undefined;
-var prev_click_img_li_test_id = undefined;
+// var prev_click_img_li_id = undefined;
+// var prev_click_img_li_test_id = undefined;
+let prev_click_img_id = undefined;
+let prev_click_img_test_id = undefined;
 var data_info=undefined;
 $(document).ready(function(){
   // display_data_bar_chart(['0','1','2','3','4','5','6','7','8','9'],
@@ -285,21 +311,41 @@ $(document).ready(function(){
 function sample_img_click(e){
   var sampleId = $(e).attr("id");
   if(sampleId.substring(0,4) === "test"){
-    if(prev_click_img_li_test_id !== undefined){
-      document.getElementById(prev_click_img_li_test_id).style.backgroundColor="";
-      document.getElementById(prev_click_img_li_test_id).style.opacity = "";
+    if(prev_click_img_test_id !== undefined){
+      document.getElementById(prev_click_img_test_id).style.border = "";
     }
-    prev_click_img_li_test_id = sampleId+"_li";
-    document.getElementById(prev_click_img_li_test_id).style.backgroundColor = "#00868B";
-    document.getElementById(prev_click_img_li_test_id).style.opacity = "0.5";
+    console.log("点击目标："+sampleId+", 设置边框颜色...");
+    prev_click_img_test_id = sampleId;
+    let img_clicked = document.getElementById(prev_click_img_test_id);
+    document.getElementById(sampleId+"_li").removeChild(img_clicked);
+    img_clicked.style.border = "10px outset red";
+    document.getElementById(sampleId+"_li").appendChild(img_clicked);
+    // document.getElementById(prev_click_img_test_id).style.border = "10px outset red;";
+    // if(prev_click_img_li_test_id !== undefined){
+    //   document.getElementById(prev_click_img_li_test_id).style.backgroundColor="";
+    //   document.getElementById(prev_click_img_li_test_id).style.opacity = "";
+    // }
+    // prev_click_img_li_test_id = sampleId+"_li";
+    // document.getElementById(prev_click_img_li_test_id).style.backgroundColor = "#00868B";
+    // document.getElementById(prev_click_img_li_test_id).style.opacity = "0.5";
   }else{
-    if(prev_click_img_li_id !== undefined){
-      document.getElementById(prev_click_img_li_id).style.backgroundColor = "";
-      document.getElementById(prev_click_img_li_id).style.opacity = "";
+    if(prev_click_img_id !== undefined){
+      document.getElementById(prev_click_img_id).style.border = "";
     }
-    prev_click_img_li_id = sampleId+"_li";
-    document.getElementById(prev_click_img_li_id).style.backgroundColor = "#00868B";
-    document.getElementById(prev_click_img_li_id).style.opacity = "0.5";
+    console.log("点击目标："+sampleId+", 设置边框颜色...");
+    prev_click_img_id = sampleId;
+    let img_clicked = document.getElementById(prev_click_img_id);
+    document.getElementById(sampleId+"_li").removeChild(img_clicked);
+    img_clicked.style.border = "10px outset red";
+    document.getElementById(sampleId+"_li").appendChild(img_clicked);
+    // document.getElementById(prev_click_img_id).style.border = "10px outset red;";
+    // if(prev_click_img_li_id !== undefined){
+    //   document.getElementById(prev_click_img_li_id).style.backgroundColor = "";
+    //   document.getElementById(prev_click_img_li_id).style.opacity = "";
+    // }
+    // prev_click_img_li_id = sampleId+"_li";
+    // document.getElementById(prev_click_img_li_id).style.backgroundColor = "#00868B";
+    // document.getElementById(prev_click_img_li_id).style.opacity = "0.5";
   }
   console.log("current click img id="+sampleId);
   var sampleIdx = parseInt(sampleId.substring(sampleId.length-1));
@@ -330,7 +376,9 @@ function sample_img_click(e){
                   axisLabel:{
                     textStyle:{
                       color:"black"
-                    }
+                    },
+                    fontFamily: 'Helvetica',
+                    fontSize: '12px',
                   }
             },
             yAxis: [
@@ -344,7 +392,9 @@ function sample_img_click(e){
                   axisLabel:{
                     textStyle:{
                       color:"black"
-                    }
+                    },
+                    fontFamily: 'Helvetica',
+                    fontSize: '12px',
                   }
                 },
                 {
@@ -355,11 +405,15 @@ function sample_img_click(e){
                   nameTextStyle:{
                     color:"white"
                   },
+                  fontFamily: 'Helvetica',
+                  fontSize: '12px',
                   axisLabel:{
                     show:false,
                     textStyle:{
                       color:"white"
-                    }
+                    },
+                    fontFamily: 'Helvetica',
+                    fontSize: '12px',
                   }
                 }
             ],
