--- a/src/resources/convertor_page_model_v2.html
+++ b/src/resources/convertor_page_model_v2.html
@@ -32,7 +32,7 @@
             <!-- 模型总体信息表格 -->
             <div style="background: rgba(238,238,238,0.4);height: 378px;display: inline-block;">
               <table id="model_general_table" style="margin-left:40px;color: #333;width: 440px;">
-                <caption class="white-text" style="caption-side: top;text-align: center;font-size: large;font-weight: bold;"><font style="color: #333;">ANN模型基本信息</font></caption>
+                <caption class="white-text" style="caption-side: top;text-align: center;font-size: large;font-weight: bold;"><font style="color: #333;">人工神经网络模型基本信息</font></caption>
                 <tr style="font-size: medium;font-weight: bold;border: solid 3px;border-color: #D6D6D6;">
                   <td style="font-size: medium;padding-left: 15px;border: solid 2px;background: rgb(238,238,238);border-color: #D6D6D6;">总层数</td>
                   <td id="model_total_layers" style="font-size: medium;padding-left: 10px;"></td>
