--- a/src/resources/snn_model_page.html
+++ b/src/resources/snn_model_page.html
@@ -207,7 +207,7 @@ body {
                     td_id.style.width = "120px";
                     td_id.style.paddingLeft = "10px";
                     td_id.style.border = "solid 3px #D6D6D6";
-                    td_id.innerText = "layer_"+i;
+                    td_id.innerText = ""+i;
                     table_line.appendChild(td_id);
 
                     let td_avg = document.createElement("td");
