change for ann model vis page

--- a/src/resources/convertor_page_data_v2.html
+++ b/src/resources/convertor_page_data_v2.html
@@ -209,8 +209,8 @@ body {
 }
 
 .loading-div {
-      width: 1800px;
-      height: 720px;
+      width: calc(100vw);
+      height: calc(100vh);
       display: table-cell;
       vertical-align: middle;
       color: #555;
