change page for snn model

--- a/src/resources/snn_model_page.html
+++ b/src/resources/snn_model_page.html
@@ -11,15 +11,26 @@
     <div style="height: 400px;">
         <!-- SNN神经元信息 -->
         <div style="display: inline-block;background: rgba(238,238,238,0.4); height: 350px;width: 450px;">
-            <div id="model_layers_vis_tab_caption" style="font-size: large;font-weight: bold;text-align: center;"><font style="color: #333;font-weight: bold;">脉冲神经网络神经元组信息</font></div>
+            <div id="model_layers_vis_tab_caption" style="text-align: center;"><font style="font-family: SourceHanSansCN-Normal;
+              font-size: 20px;
+              color: #333333;
+              letter-spacing: 1.14px;">脉冲神经网络神经元组信息</font></div>
             <table id="snn_neurons_table" style="margin-left:10px;margin-left: 20px;border: solid 3px #D6D6D6;width: 400px;">
                 <caption class="white-text" style="caption-side: top;text-align: center;"></caption>
                 <thead>
                   <tr style="margin-top: 15px;border: solid 2px #D6D6D6;color: #333;">
-                    <td style="font-size: medium;font-weight: bold;width: 100px;padding-left: 10px;border: solid 2px #D6D6D6;background: #EEEEEE">layer编号</td>
-                    <td style="font-size: medium;font-weight: bold;width: 100px;padding-left: 10px;border: solid 2px #D6D6D6;background: #EEEEEE">神经元个数</td>
-                    <td style="font-size: medium;font-weight: bold;width: 100px;padding-left: 10px;border: solid 2px #D6D6D6;background: #EEEEEE">求解方法</td>
-                    <td style="font-size: medium;font-weight: bold;width: 100px;padding-left: 10px;border: solid 2px #D6D6D6;background: #EEEEEE">电压阈值</td>
+                    <td style="width: 100px;text-align: center;border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
+                    font-size: 14px;
+                    color: #666666;">layer编号</td>
+                    <td style="width: 100px;text-align: center;border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
+                    font-size: 14px;
+                    color: #666666;">神经元个数</td>
+                    <td style="width: 100px;text-align: center;border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
+                    font-size: 14px;
+                    color: #666666;">求解方法</td>
+                    <td style="width: 100px;text-align: center;border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
+                    font-size: 14px;
+                    color: #666666;">电压阈值</td>
                   </tr>
                   <!-- 动态加载 -->
                 </thead>
@@ -27,28 +38,46 @@
         </div>
 
         <div style="display: inline-block;background: rgba(238,238,238,0.4);height: 350px;width: 450px;">
-          <div style="font-size: large;font-weight: bold;text-align: center;"><font style="color: #333;font-weight: bold;">层连接权重统计</font></div>
+          <div style="text-align: center;"><font style="font-family: SourceHanSansCN-Normal;
+            font-size: 20px;
+            color: #333333;
+            letter-spacing: 1.14px;">层连接权重统计</font></div>
           <table id="snn_layer_wt_table" style="border: solid 3px #D6D6D6;width: 400px;margin-left: 20px;">
             <caption class="white-text" style="caption-side: top;text-align: center;"></caption>
             <thead>
               <tr style="margin-top: 15px;border: solid 2px #D6D6D6;color: #333;">
-                <td style="font-size: medium;font-weight: bold;width: 80px;padding-left: 10px;border: solid 2px #D6D6D6;background: #EEEEEE">layer编号</td>
-                <td style="font-size: medium;font-weight: bold;width: 80px;padding-left: 10px;border: solid 2px #D6D6D6;background: #EEEEEE"">权重均值</td>
-                <td style="font-size: medium;font-weight: bold;width: 80px;padding-left: 10px;border: solid 2px #D6D6D6;background: #EEEEEE"">权重方差</td>
+                <td style="width: 80px;text-align: center;border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
+                font-size: 14px;
+                color: #666666;">layer编号</td>
+                <td style="width: 80px;text-align: center;border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
+                font-size: 14px;
+                color: #666666;">权重均值</td>
+                <td style="width: 80px;text-align: center;border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
+                font-size: 14px;
+                color: #666666;">权重方差</td>
               </tr>
             </thead>
           </table>
         </div>
 
         <div style="height: 350px;margin-top: 20px;display: inline-block;background: rgba(238,238,238,0.4);width: 450px;">
-            <div id="model_layers_vis_tab_caption" style="font-size: large;font-weight: bold;text-align: center;"><font style="color: #333;font-weight: bold;">脉冲神经网络突触连接信息</font></div>
+            <div id="model_layers_vis_tab_caption" style="text-align: center;"><font style="font-family: SourceHanSansCN-Normal;
+              font-size: 20px;
+              color: #333333;
+              letter-spacing: 1.14px;">脉冲神经网络突触连接信息</font></div>
             <table id="layer_conns_table" style="margin-left:20px;border: solid 3px #D6D6D6;width: 400px;">
                 <caption class="white-text" style="caption-side: top;text-align: center;"></caption>
                 <thead>
                   <tr style="margin-top: 15px;border: solid 2px #D6D6D6;color: #333;">
-                    <td style="font-size: medium;font-weight: bold;width: 100px;padding-left: 10px;border: solid 2px #D6D6D6;background: #EEEEEE"">layer编号</td>
-                    <td style="font-size: medium;font-weight: bold;width: 100px;padding-left: 10px;border: solid 2px #D6D6D6;background: #EEEEEE"">连接稠密度</td>
-                    <td style="font-size: medium;font-weight: bold;width: 100px;padding-left: 10px;border: solid 2px #D6D6D6;background: #EEEEEE"">平均连接个数</td>
+                    <td style="width: 100px;text-align: center;border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
+                    font-size: 14px;
+                    color: #666666;">layer编号</td>
+                    <td style="width: 100px;text-align: center;border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
+                    font-size: 14px;
+                    color: #666666;">连接稠密度</td>
+                    <td style="width: 100px;text-align: center;border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
+                    font-size: 14px;
+                    color: #666666;">平均连接个数</td>
                   </tr>
                   <!-- 动态加载 -->
                 </thead>
@@ -58,11 +87,17 @@
     <div style="height: 450px;margin-top: -25px;">
         <!--权重分布图-->
         <div style="height: 440px;width: 670px;display: inline-block;vertical-align: top;background: rgba(238,238,238,0.4);">
-            <div id="model_layers_vis_tab_caption" style="font-size: large;font-weight: bold;text-align: center;"><font style="color: #333;font-weight: bold;">脉冲神经网络权重分布</font></div>
+            <div id="model_layers_vis_tab_caption" style="text-align: center;"><font style="font-family: SourceHanSansCN-Normal;
+              font-size: 20px;
+              color: #333333;
+              letter-spacing: 1.14px;">脉冲神经网络权重分布</font></div>
             <div id="weight_dist_chart" style="width: 580px;height: 320px;margin-left: 40px;margin-top: 10px;"></div>
         </div>
         <div style="height: 440px;width: 670px;display: inline-block;vertical-align: top;background: rgba(238,238,238,0.4);">
-            <div style="font-size: large;font-weight: bold;text-align: center;"><font style="color: #333;font-weight: bold;">模型连接图</font></div>
+            <div style="text-align: center;"><font style="font-family: SourceHanSansCN-Normal;
+              font-size: 20px;
+              color: #333333;
+              letter-spacing: 1.14px;">模型连接图</font></div>
             <div id="sangky_chart" style="width: 560px;height: 400px;display: inline-block;margin-left: 20px;"></div>
         </div>
     </div>
@@ -132,19 +167,19 @@ body {
                       var line = document.createElement("tr");
                       line.style = "margin-top: 15px;border: solid 3px #D6D6D6;color: #333;"
                       var col_1 = document.createElement("td");
-                      col_1.style = "font-size: medium; padding-left:20px;";
+                      col_1.style = "text-align:right; padding-right:15px; font-family: ArialMT;font-size: 14px;color: #333333;";
                       col_1.innerText = neurons_info[i].idx;
 
                       var col_2 = document.createElement("td");
-                      col_2.style = "font-size: medium;border: solid 3px #D6D6D6;padding-left:10px;";
+                      col_2.style = "border: solid 3px #D6D6D6;text-align:right; padding-right:15px;;font-family: ArialMT;font-size: 14px;color: #333333;";
                       col_2.innerText = neurons_info[i].neuron_count;
 
                       var col_3 = document.createElement("td");
-                      col_3.style = "font-size: medium;border: solid 3px #D6D6D6;padding-left:10px;";
+                      col_3.style = "border: solid 3px #D6D6D6;padding-left:10px;font-family: ArialMT;font-size: 14px;color: #333333;";
                       col_3.innerText = neurons_info[i].method;
 
                       var col_4 = document.createElement("td");
-                      col_4.style = "font-size: medium; border: solid 3px #D6D6D6;padding-left:10px;";
+                      col_4.style = "border: solid 3px #D6D6D6;text-align:right; padding-right:15px;;font-family: ArialMT;font-size: 14px;color: #333333;";
                       col_4.innerText = neurons_info[i].vthresh;
 
                       line.appendChild(col_1);
@@ -161,15 +196,15 @@ body {
                       var line = document.createElement("tr");
                       line.style = "margin-top: 15px; border: solid 3px #D6D6D6; color:#333;";
                       var col_1 = document.createElement("td");
-                      col_1.style = "font-size: medium; padding-left:20px;border: solid 3px #D6D6D6;";
+                      col_1.style = "text-align:right; padding-right:15px;border: solid 3px #D6D6D6;font-family: ArialMT;font-size: 14px;color: #333333;";
                       col_1.innerText = synaps_info[i].idx;
 
                       var col_2 = document.createElement("td");
-                      col_2.style = "font-size: medium; border: solid 3px #D6D6D6;padding-left:10px;";
+                      col_2.style = "border: solid 3px #D6D6D6;text-align:right; padding-right:15px;font-family: ArialMT;font-size: 14px;color: #333333;";
                       col_2.innerText = synaps_info[i].ratio;
 
                       var col_3 = document.createElement("td");
-                      col_3.style = "font-size: medium; border: solid 3px #D6D6D6;padding-left:10px;";
+                      col_3.style = "border: solid 3px #D6D6D6;text-align:right; padding-right:15px;font-family: ArialMT;font-size: 14px;color: #333333;";
                       col_3.innerText = synaps_info[i].avg_conn;
 
                       line.appendChild(col_1);
@@ -203,25 +238,35 @@ body {
                     table_line.style.color = "#333";
 
                     let td_id = document.createElement("td");
-                    td_id.style.fontSize = "medium";
+                    // font-family: ArialMT;font-size: 14px;color: #333333;
+                    td_id.style.fontSize = "14px";
+                    td_id.style.fontFamily = "ArialMT";
+                    td_id.style.color = "#333333";
                     td_id.style.width = "120px";
-                    td_id.style.paddingLeft = "10px";
                     td_id.style.border = "solid 3px #D6D6D6";
+                    td_id.style.textAlign = "right";
+                    td_id.style.paddingRight = "15px";
                     td_id.innerText = ""+i;
                     table_line.appendChild(td_id);
 
                     let td_avg = document.createElement("td");
-                    td_avg.style.fontSize = "medium";
+                    td_avg.style.fontSize = "14px";
+                    td_avg.style.fontFamily = "ArialMT";
+                    td_avg.style.color = "#333333";
                     td_avg.style.width = "120px";
-                    td_avg.style.paddingLeft = "10px";
                     td_avg.style.border = "solid 3px #D6D6D6";
+                    td_avg.style.textAlign = "right";
+                    td_avg.style.paddingRight = "15px";
                     td_avg.innerText = infos.record_layers_wt_info.record_wts_avg[i];
                     table_line.appendChild(td_avg);
 
                     let td_std = document.createElement("td");
-                    td_std.style.fontSize = "medium";
+                    td_std.style.fontSize = "14px";
+                    td_std.style.fontFamily = "ArialMT";
+                    td_std.style.color = "#333333";
                     td_std.style.width = "120px";
-                    td_std.style.paddingLeft = "10px";
+                    td_std.style.textAlign = "right";
+                    td_std.style.paddingRight = "15px";
                     td_std.style.border = "solid 3px #D6D6D6";
                     td_std.innerText = infos.record_layers_wt_info.record_wts_std[i];
                     table_line.appendChild(td_std);
@@ -280,26 +325,34 @@ body {
                     data: label_names,
                     name:"权重",
                     nameTextStyle:{
-                      color:"black"
+                      color:"#333333",
+                      fontFamily: 'SourceHanSansCN-Normal',
+                      fontSize: '14px',
                     },
                     axisLabel:{
                       textStyle:{
-                          color:"black"
-                      }
+                          color:"#333333"
+                      },
+                      fontFamily: 'SourceHanSansCN-Normal',
+                      fontSize: '14px',
                    }
                 },
                 yAxis: {
                     type: 'value',
                     name:"连接个数(log_10)",
                     nameTextStyle:{
-                      color:"black"
+                      color:"#333333",
+                      fontFamily: 'SourceHanSansCN-Normal',
+                      fontSize: '14px',
                     },
                     scale:true,
                     axisLabel: {
                         formatter: '{value}',
                         textStyle:{
-                            color:"black"
-                        }
+                            color:"#333333"
+                        },
+                        fontFamily: 'SourceHanSansCN-Normal',
+                        fontSize: '14px',
                     }
                 },
                 series: [{
@@ -355,8 +408,9 @@ body {
                             // text: 'Network Structure Diagram',
                             text: 'ratio     1 : ' + ratios,
                             textStyle:{
-                                fontSize:10,
-                                color:"black"
+                                color:"#333333",
+                                fontFamily: 'SourceHanSansCN-Normal',
+                                fontSize: '14px',
                             },
                             bottom: '3%',
                             left: 'center'
@@ -391,16 +445,24 @@ body {
                                         fontSize: 14,
                                         verticalAlign: 'top',
                                         align: 'center',
-                                        padding: [0, 0, 20, 0]
+                                        padding: [0, 0, 20, 0],
+                                        color:"#333333",
+                                        fontFamily: 'SourceHanSansCN-Normal',
+                                        letterSpacing: '0.8px'
                                     },
                                     b: {
                                         fontSize: 8,
                                         align: 'center',
                                         padding: [0, 10, 0, 0],
-                                        lineHeight: 25
+                                        lineHeight: 25,
+                                        color:"#333333",
+                                        fontFamily: 'SourceHanSansCN-Normal',
+                                        letterSpacing: '0.8px'
                                     }
                                 },
-                                color:"black"
+                                color:"#333333",
+                                fontFamily: 'SourceHanSansCN-Normal',
+                                fontSize: '14px',
                             }
                         },
                         animationDuration: 1500,
