--- a/src/resources/model_simulate_page_v2.html
+++ b/src/resources/model_simulate_page_v2.html
@@ -8,84 +8,84 @@
 
 <body class="dark-mode" style="height: 100%;width: 100%;white-space: nowrap;overflow: auto;">
 
-    <div style="margin-top: 20px;display: block;">
+    <div style="margin-top: 5px;display: block;">
 
-        <div style="background: rgba(238,238,238,0.4);width: 350px;height: 300px;display: inline-block;">
+        <div style="background: rgba(238,238,238,0.4);width: 400px;height: 380px;display: inline-block;">
           <div>
             <div id="model_layers_vis_tab_caption" style="text-align: center;"><font style="font-family: SourceHanSansCN-Normal;
               font-size: 20px;
               color: #333333;
               letter-spacing: 1.14px;">仿真配置结果评估</font></div>
-            <table id="layer_conf_val" style="width: 260px;margin-left:40px;margin-top: 70px;border: solid 3px #D6D6D6;">
+            <table id="layer_conf_val" style="width: 320px;margin-left:40px;margin-top: 5px;border: solid 3px #D6D6D6;">
                 <caption class="white-text" style="caption-side: top;text-align: center;"></caption>
                 <tr style="height: 25px; border: solid 2px #D6D6D6;color: #333;">
                   <td style="padding-left: 15px;border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
                   font-size: 14px;
-                  color: #666666;">膜电位阈值</td>
-                  <td id="simulate_vthresh" style="text-align: right;padding-right: 15px;"></td>
+                  color: #666666;padding-top: 12px;padding-bottom: 12px;">膜电位阈值</td>
+                  <td id="simulate_vthresh" style="text-align: right;padding-right: 15px;padding-top: 12px;padding-bottom: 12px;"></td>
                 </tr>
-                <tr style="height: 25px;border: solid 2px #D6D6D6;color: #333;"">
+                <tr style="height: 25px;border: solid 2px #D6D6D6;color: #333;">
                   <td style="padding-left: 15px;border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
                   font-size: 14px;
-                  color: #666666;">神经元时间步长</td>
-                  <td id="simulate_neuron_dt" style="text-align: right;padding-right: 15px;"></td>
+                  color: #666666;padding-top: 12px;padding-bottom: 12px;">神经元时间步长</td>
+                  <td id="simulate_neuron_dt" style="text-align: right;padding-right: 15px;padding-top: 12px;padding-bottom: 12px;"></td>
                 </tr>
-                <tr style="height: 25px;border: solid 2px #D6D6D6;color: #333;"">
+                <tr style="height: 25px;border: solid 2px #D6D6D6;color: #333;">
                   <td style="padding-left: 15px;border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
                   font-size: 14px;
-                  color: #666666;">突触时间步长</td>
-                  <td id="simulate_synapse_dt" style="text-align: right;padding-right: 15px;"></td>
+                  color: #666666;padding-top: 12px;padding-bottom: 12px;">突触时间步长</td>
+                  <td id="simulate_synapse_dt" style="text-align: right;padding-right: 15px;padding-top: 12px;padding-bottom: 12px;"></td>
                 </tr>
-                <tr style="height: 25px;border: solid 2px #D6D6D6;color: #333;"">
+                <tr style="height: 25px;border: solid 2px #D6D6D6;color: #333;">
                   <td  style="padding-left: 15px;border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
                   font-size: 14px;
-                  color: #666666;">延迟</td>
-                  <td id="simulate_delay" style="text-align: right;padding-right: 15px;"></td>
+                  color: #666666;padding-top: 12px;padding-bottom: 12px;">延迟</td>
+                  <td id="simulate_delay" style="text-align: right;padding-right: 15px;padding-top: 12px;padding-bottom: 12px;"></td>
                 </tr>
-                <tr style="height: 25px;border: solid 2px #D6D6D6;color: #333;"">
+                <tr style="height: 25px;border: solid 2px #D6D6D6;color: #333;">
                   <td style="padding-left: 15px;border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
                   font-size: 14px;
-                  color: #666666;">仿真时长</td>
-                  <td id="simulate_dura" style="text-align: right;padding-right: 15px;"></td>
+                  color: #666666;padding-top: 12px;padding-bottom: 12px;">仿真时长</td>
+                  <td id="simulate_dura" style="text-align: right;padding-right: 15px;padding-top: 12px;padding-bottom: 12px;"></td>
                 </tr>
-                <tr style="height: 25px;border: solid 2px #D6D6D6;color: #333;"">
+                <tr style="height: 25px;border: solid 2px #D6D6D6;color: #333;">
                   <td style="color: #00BE57;padding-left: 15px;border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
                   font-size: 14px;
-                  color: #666666;">准确率</td>
-                  <td id="simulate_acc" style="color: #00BE57;text-align: right;padding-right: 15px;"></td>
+                  color: #666666;padding-top: 12px;padding-bottom: 12px;">准确率</td>
+                  <td id="simulate_acc" style="color: #00BE57;text-align: right;padding-right: 15px;padding-top: 12px;padding-bottom: 12px;"></td>
                 </tr>    
             </table>
           </div>
         </div>
 
-        <div style="background: rgba(238,238,238,0.4);width: 350px;height: 300px;display: inline-block;">
+        <div style="background: rgba(238,238,238,0.4);width: 500px;height: 380px;display: inline-block;">
           <div style="text-align: center;margin-left: 40px;"><font style="font-family: SourceHanSansCN-Normal;
             font-size: 20px;
             color: #333333;
             letter-spacing: 1.14px;">放电次数均值方差统计</font></div>
-          <table id="snn_layers_spike_table" style="width: 280px;margin-left:40px;margin-top: 70px;border: solid 3px #D6D6D6;">
+          <table id="snn_layers_spike_table" style="width: 420px;margin-left:40px;margin-top: 5px;border: solid 3px #D6D6D6;">
             <caption class="white-text" style="caption-side: top;text-align: center;"></caption>
             <tr style="height: 25px; border: solid 2px #D6D6D6;color: #333;">
               <td style="text-align: center;border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
               font-size: 14px;
-              color: #666666;">层编号</td>
+              color: #666666;padding-top: 12px;padding-bottom: 12px;">层编号</td>
               <td style="text-align: center;border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
               font-size: 14px;
-              color: #666666;">放电次数均值</td>
+              color: #666666;padding-top: 12px;padding-bottom: 12px;">放电次数均值</td>
               <td style="text-align: center;border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
               font-size: 14px;
-              color: #666666;">放电次数方差</td>
+              color: #666666;padding-top: 12px;padding-bottom: 12px;">放电次数方差</td>
             </tr>
           </table>
         </div>
 
-        <div style="background: rgba(238,238,238,0.4);width: 500px;height: 300px;display: inline-block;">
+        <div style="background: rgba(238,238,238,0.4);width: 600px;height: 380px;display: inline-block;">
           <div>
             <div id="neurons_v_out_div" style="text-align: center;"><font style="font-family: SourceHanSansCN-Normal;
               font-size: 20px;
               color: #333333;
               letter-spacing: 1.14px;">神经元放电</font></div>
-            <div style="width: 360px;margin-left: 40px;">
+            <div style="width: 360px;margin-left: 40px;margin-top: 20px;">
               <form class="form-horizontal" role="form">
                 <div class="form-group">
                   <label class="control-label col-md-8" for="select_which_layer"><font style="font-family: PingFangSC-Regular;
@@ -101,40 +101,40 @@
                 </div>
               </form>
             </div>
-            <div id="neurons_v_chart" style="width: 460px;height: 240px;margin-left: 40px;margin-top: 40px;"></div>
+            <div id="neurons_v_chart" style="width: 540px;height: 320px;margin-left: 40px;margin-top: 20px;"></div>
           </div>
         </div>
     </div>
     <div style="margin-top: 5px;display: block;">
-        <div style="display: inline-block;width: 610px;height: 550px;background: rgba(238,238,238,0.4);">
+        <div style="display: inline-block;width: 760px;height: 520px;background: rgba(238,238,238,0.4);">
           <div id="model_input_spike_cap" style="text-align: center;"><font style="font-family: SourceHanSansCN-Normal;
             font-size: 20px;
             color: #333333;
             letter-spacing: 1.14px;">脉冲神经网络输入层脉冲</font></div>
-          <div id="input_spike_charts" style="width: 460px;height: 320px;margin-left: 70px;display: inline-block;margin-top: 40px;"></div>
-          <ul id="input_spike_sample_imgs_ul" style="height: 60px;width: 460px;overflow: auto; white-space: nowrap;display: block;margin-left: 55px;">
+          <div id="input_spike_charts" style="width:660px;height: 400px;margin-left: 70px;display: inline-block;margin-top: 20px;"></div>
+          <ul id="input_spike_sample_imgs_ul" style="height: 100px;width: 660px;overflow: auto; white-space: nowrap;display: block;margin-left: 55px;margin-top: -30px;z-index: 2;">
           </ul>
         </div>
-        <div style="width: 590px;height: 550px;display: inline-block;margin: left 20px;vertical-align: top;background: rgba(238,238,238,0.4);">
+        <div style="width: 760px;height: 520px;display: inline-block;margin: left 20px;vertical-align: top;background: rgba(238,238,238,0.4);">
             <div id="model_layers_vis_tab_caption" style="text-align: center;"><font style="font-family: SourceHanSansCN-Normal;
               font-size: 20px;
               color: #333333;
               letter-spacing: 1.14px;">脉冲神经网络输出层脉冲</font></div>
-            <span style="margin-left: 200px;font-family: SourceHanSansCN-Normal;
+            <span style="margin-left: 280px;font-family: SourceHanSansCN-Normal;
             font-size: 14px;
             color: #23D951;
             letter-spacing: 0.8px;">红色标记图像为输出层预测错误</span>
-            <div id="model_layers_vis_tab_caption" style="text-align: center;background: rgba(238,238,238,1.00);border: solid 1px #D6D6D6;width: 460px;margin-left: 100px;"><font style="font-family: SourceHanSansCN-Medium;
+            <div id="model_layers_vis_tab_caption" style="text-align: center;background: rgba(238,238,238,1.00);border: solid 1px #D6D6D6;width: 460px;margin-left: 180px;"><font style="font-family: SourceHanSansCN-Medium;
               font-size: 14px;
               color: #666666;">统计计数</font></div>
-            <table id="spike_out_count_table" style="margin-left: 100px;border: solid 3px #D6D6D6;color: #333;width: 460px;">
+            <table id="spike_out_count_table" style="margin-left: 180px;border: solid 3px #D6D6D6;color: #333;width: 460px;">
                 <tr id="out_labels" style="border: solid 2px #D6D6D6;">
                 </tr>
                 <tr id="out_counts_tr" style="border: solid 2px #D6D6D6;">
                 </tr>
             </table>
-            <div id="spike_charts" style="width: 460px;height: 320px;margin-left: 70px;display: inline-block;"></div>
-            <ul id="sample_imgs_ul" style="height: 100px;width: 460px;overflow: auto; white-space: nowrap;display: block;margin-left: 80px;">
+            <div id="spike_charts" style="width: 660px;height: 320px;margin-left: 70px;display: inline-block;"></div>
+            <ul id="sample_imgs_ul" style="height: 100px;width: 660px;overflow: auto; white-space: nowrap;display: block;margin-left: 80px;margin-top: -30px;z-index: 2;">
             </ul>
         </div>
     </div>
@@ -352,6 +352,7 @@ body {
 
                     var label_span = document.createElement("span");
                     label_span.style.color = "#333";
+                    label_span.style.height='14px';
                     console.log("图片 i="+i+", uri="+test_img_uris[i]);
                     // a.split("/")[5].split("_")[4].split(".")[0]
                     // label_span.innerText = "标签: "+test_img_uris[i].split("_")[5].split(".")[0];
@@ -366,7 +367,7 @@ body {
                     input_img_li.style.listStyle = "none";
                     input_img_li.id = "inputimg_li_"+i;
                     input_img_li.style.width = "53px";
-                    input_img_li.style.height = "100%";
+                    input_img_li.style.height = "50";
                     input_img_li.style.display = "inline-block";
                     input_img_li.style.marginRight = "10px";
                     var input_img_tag = document.createElement("img");
@@ -493,6 +494,8 @@ body {
                     td_id.style.textAlign = 'right';
                     td_id.style.paddingRight = '15px';
                     td_id.style.border = "solid 2px #D6D6D6";
+                    td_id.style.paddingTop = '12px';
+                    td_id.style.paddingBottom = '12px';
                     td_id.innerText = ""+j;
                     table_line.appendChild(td_id);
 
@@ -503,6 +506,8 @@ body {
                     td_spike_avg.style.textAlign = 'right';
                     td_spike_avg.style.paddingRight = '15px';
                     td_spike_avg.style.order = "solid 2px #D6D6D6";
+                    td_spike_avg.style.paddingTop = '12px';
+                    td_spike_avg.style.paddingBottom = '12px';
                     td_spike_avg.innerText = infos.record_spike_out_info.spike_count_avgs[j];
                     table_line.appendChild(td_spike_avg);
 
@@ -513,6 +518,8 @@ body {
                     td_spike_std.style.textAlign = 'right';
                     td_spike_std.style.paddingRight = '15px';
                     td_spike_std.style.border = "solid 2px #D6D6D6";
+                    td_spike_std.style.paddingTop = '12px';
+                    td_spike_std.style.paddingBottom = '12px';
                     td_spike_std.innerText = infos.record_spike_out_info.spike_count_stds[j];
                     table_line.appendChild(td_spike_std);
 
