--- a/src/resources/model_simulate_page_v2.html
+++ b/src/resources/model_simulate_page_v2.html
@@ -8,6 +8,11 @@
 
 <body class="dark-mode" style="height: 100%;width: 100%;white-space: nowrap;overflow: auto;">
 
+  <div class="loading-div">
+    <i class="fa fa-spinner fa-pulse fa-3x fa-fw" style="display: block;margin-left: 50vw;"></i>
+    <span style="color: #333;height: 50px;width: 120px;margin-left: calc(50vw - 20px);display: block;"><font style="color: #333;font-weight: bolder;">仿真数据加载中...</font></span>
+  </div>
+
     <div style="margin-top: 5px;display: block;">
 
         <div style="background: rgba(238,238,238,0.4);width: 400px;height: 380px;display: inline-block;">
@@ -180,9 +185,25 @@ body {
     -webkit-font-feature-settings: 'liga';
     -webkit-font-smoothing: antialiased;
   }
+
+.loading-div {
+    width: calc(100vw);
+    height: calc(100vh);
+    display: table-cell;
+    vertical-align: middle;
+    color: #555;
+    overflow: hidden;
+    text-align: center;
+  }
+.loading-div::before {
+  display: inline-block;
+  vertical-align: middle;
+} 
+
 </style>
 <!-- Compiled and minified CSS -->
 <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" href="http://localhost:6003/css/font-awesome.min.css">
 
 <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
 <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -531,6 +552,8 @@ body {
                   console.log("Auto click first image.......");
                   document.getElementById("img_0").click();
                   document.getElementById("inputimg_0").click();
+                  
+                  $(".loading-div").hide(); // 隐藏加载提示
               }
           });
       });
