--- a/src/resources/snn_model_page.html
+++ b/src/resources/snn_model_page.html
@@ -8,6 +8,11 @@
 
 <body class="dark-mode" style="height: 100%;width: 100%;white-space: nowrap;overflow: auto;">
 
+  <div class="loading-div">
+    <i class="fa fa-spinner fa-pulse fa-3x fa-fw" style="display: block;margin-left: 50vw;"></i>
+    <span style="color: #333;height: 50px;width: 120px;margin-left: calc(50vw - 20px);display: block;"><font style="color: #333;font-weight: bolder;">数据信息加载中...</font></span>
+  </div>
+
     <div style="height: 400px;">
         <!-- SNN神经元信息 -->
         <div style="display: inline-block;background: rgba(238,238,238,0.4); height: 400px;width: 500px;">
@@ -144,9 +149,24 @@ body {
     -webkit-font-feature-settings: 'liga';
     -webkit-font-smoothing: antialiased;
   }
+
+  .loading-div {
+      width: calc(100vw);
+      height: calc(100vh);
+      display: table-cell;
+      vertical-align: middle;
+      color: #555;
+      overflow: hidden;
+      text-align: center;
+  }
+  .loading-div::before {
+      display: inline-block;
+      vertical-align: middle;
+  } 
 </style>
 <!-- Compiled and minified CSS -->
 <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" href="http://localhost:6003/css/font-awesome.min.css">
 
 <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
 <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -280,6 +300,8 @@ body {
                     document.getElementById("snn_layer_wt_table").appendChild(table_line);
 
                   }
+
+                  $(".loading-div").hide(); // 隐藏加载提示
 
             //       <table id="snn_layer_wt_table" style="width: 320px;">
             // <caption class="white-text" style="caption-side: top;text-align: center;"></caption>
